<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fragment_bg_clr"
    android:gravity="center"
    android:padding="@dimen/normal_padding"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/old_pwd_et"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_margin="@dimen/normal_margin"
        android:background="@drawable/input_box"
        android:hint="@string/change_old_pwd_text"
        android:inputType="textPassword"
        android:paddingBottom="@dimen/normal_padding"
        android:paddingLeft="15dp"  
        android:maxLength="50"
        android:paddingRight="@dimen/normal_padding"
        android:paddingTop="@dimen/normal_padding" />

    <EditText
        android:id="@+id/new_pwd_et"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_margin="@dimen/normal_margin"
        android:background="@drawable/input_box"
        android:hint="@string/change_new_pwd_text"
        android:inputType="textPassword"
        android:paddingBottom="@dimen/normal_padding"
        android:paddingLeft="15dp"
        android:maxLength="50"
        android:paddingRight="@dimen/normal_padding"
        android:paddingTop="@dimen/normal_padding" />

    <EditText
        android:id="@+id/conform_pwd_et"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_margin="@dimen/normal_margin"
        android:background="@drawable/input_box"
        android:hint="@string/change_conf_pwd_text"
        android:inputType="textPassword"
        android:paddingBottom="@dimen/normal_padding"
        android:paddingLeft="15dp"
        android:maxLength="50"
        android:paddingRight="@dimen/normal_padding"
        android:paddingTop="@dimen/normal_padding" />

    <Button
        android:id="@+id/change_pwd_btn"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_margin="@dimen/normal_margin"
        android:background="@color/com_facebook_blue"
        android:text="@string/change_pwd_btn_text"
        android:textColor="#ffffff" />

</LinearLayout>